# cadara

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  about.toml  deny.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  clear-cache.yml  lint-docs.yml  lint-pr-title.yml  lint-pr.yml  lint-rust.yml  test.yml
crates/cadara/: Cargo.toml  env.js  index.html
crates/cadara/src/: demo_workspace.rs  lib.rs  main.rs  workspace.rs
crates/cadara/src/workspace/: demo_workspace.rs
crates/computegraph/: Cargo.toml
crates/computegraph/src/: lib.rs
crates/computegraph/tests/: caching.rs  context.rs  dependencies.rs  graph_construction.rs  graph_manipulation.rs  macros.rs  metadata.rs  thread_safety.rs
crates/computegraph/tests/common/: mod.rs
crates/computegraph_macros/: Cargo.toml
crates/computegraph_macros/src/: lib.rs
crates/icara/: Cargo.toml
crates/icara/src/: lib.rs  tab.rs
crates/modeling-module/: Cargo.toml
crates/modeling-module/src/: lib.rs  operation.rs  persistent_data.rs  persistent_user_data.rs  session_data.rs  shared_data.rs
crates/modeling-module/src/operation/: extrude.rs  fillet.rs  sketch.rs
crates/modeling-module/tests/: extrude_and_fillet_changes.rs  sketch_changes.rs  step_crud.rs  walk.rs
crates/modeling-workspace/: Cargo.toml
crates/modeling-workspace/src/: lib.rs  viewport.rs
crates/modeling-workspace/src/viewport/: camera.rs  rendering.rs  scene_nodes.rs  shader.wgsl  state.rs
crates/module/: Cargo.toml
crates/module/src/: lib.rs
crates/occara/: Cargo.toml  README.md  build.rs
crates/occara/benches/: occara.rs
crates/occara/cpp/: MakeBottle.cpp  geom.cpp  shape.cpp
crates/occara/cpp/shape/: vertex.cpp
crates/occara/include/: MakeBottle.hpp  cxx_wrapper.hpp  geom.hpp  shape.hpp
crates/occara/include/shape/: vertex.hpp
crates/occara/src/: ffi.rs  geom.rs  lib.rs  make_bottle.rs  shape.rs
crates/occara/tests/: boolean.rs  fillet_errors.rs  make_bottle.rs  meshing.rs  thread_safety.rs
crates/opencascade-sys/: .gitignore  Cargo.toml  build.rs
crates/opencascade-sys/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: branch.rs  checkpoint.rs  data.rs  document.rs  lib.rs  manager.rs  merge.rs  module_data.rs  oplog.rs  project.rs  resolve.rs  tracked.rs  transaction.rs  user.rs
crates/project/src/data/: internal.rs  session.rs  transaction.rs
crates/project/src/data/session/: internal.rs
crates/project/src/document/: internal.rs  module.rs  session.rs  transaction.rs
crates/project/src/document/session/: internal.rs
crates/project/tests/: branching.rs  data_management.rs  data_opening.rs  document_opening.rs  lamport_clock.rs  manager.rs  multi_user.rs  path.rs  serde.rs  serialization.rs  state_management.rs  test_common.rs  thread_safety.rs  time_travel.rs  tracked.rs  transactions.rs  undo_redo.rs
crates/project/tests/common/: minimal_test_module.rs  mod.rs  test_module.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  transaction.rs
crates/viewport/: Cargo.toml
crates/viewport/src/: lib.rs  pipeline.rs
crates/viewport/tests/pipeline/: basic_operations.rs  cache_leak.rs  common.rs  dynamic_nodes.rs  error_handling.rs  main.rs
crates/wasm-libc/: Cargo.toml
crates/wasm-libc/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/: Notes.md  interface-design.md
src/: main.rs
