[workspace]
members = [
  "crates/utils",
  "crates/project",
  "crates/opencascade-sys",
  "crates/occara",
  "crates/viewport",
  "crates/computegraph",
  "crates/computegraph_macros",
  "crates/cadara",
  "crates/module",
  "crates/workspace",
  "crates/modeling-workspace",
  "crates/modeling-module",
]
resolver = "2"
