[workspace]
members = [
  "crates/project",
  "crates/opencascade-sys",
  "crates/occara",
  "crates/viewport",
  "crates/computegraph",
  "crates/computegraph_macros",
  "crates/cadara",
  "crates/module",
  "crates/workspace",
  "crates/modeling-workspace",
  "crates/modeling-module",
  "crates/wasm-libc",
]
resolver = "2"

[workspace.dependencies]
project = { path = "crates/project" }
# To enable debugging of OpenCASCADE itself, use this instead:
# opencascade-sys = { path = "crates/opencascade-sys", features = ["debug"] }
opencascade-sys = { path = "crates/opencascade-sys" }
occara = { path = "crates/occara" }
viewport = { path = "crates/viewport" }
computegraph = { path = "crates/computegraph" }
computegraph_macros = { path = "crates/computegraph_macros" }
module = { path = "crates/module" }
workspace = { path = "crates/workspace" }
modeling-workspace = { path = "crates/modeling-workspace" }
modeling-module = { path = "crates/modeling-module" }
wasm-libc = { path = "crates/wasm-libc" }

iced = { version = "0.13", features = ["advanced", "webgl"] }
tracing-subscriber = "0.3"
thiserror = "1.0"
dyn-clone = "1.0"
uuid = { version = "1.12", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
bytemuck = "1.21"
glam = { version = "0.29", features = ["bytemuck"] }
walkdir = "2.4"
paste = "1.0"

cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
autocxx = "0.27"
autocxx-build = "0.27"

miette = { version = "5", features = ["fancy"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
erased-serde = "0.4"
lazy_static = "1.4"
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
dagga = "0.2.1"

[workspace.package]
version = "0.1.0"
authors = ["Maxim Raznatovski <nda.mr43@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/maximmaxim345/cadara"
homepage = "https://github.com/maximmaxim345/cadara"
categories = ["gui"]
keywords = ["cad", "gui", "brep", "graphics", "iced"]
