[package]
name = "cadara"
description = "WIP Parametric CAD Software"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
iced.workspace = true
tracing-subscriber.workspace = true
viewport.workspace = true
computegraph.workspace = true
workspace.workspace = true
modeling-workspace.workspace = true
modeling-module.workspace = true
module.workspace = true
project.workspace = true
