[package]
name = "cadara"
description = "WIP Parametric CAD Software"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
iced.workspace = true
tracing-subscriber.workspace = true
getrandom.workspace = true          # Required for building the "js" feature for wasm builds
viewport.workspace = true
computegraph.workspace = true
workspace.workspace = true
modeling-workspace.workspace = true
modeling-module.workspace = true
module.workspace = true
project.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-libc.workspace = true
console_log.workspace = true
console_log.features = ["wasm-bindgen"]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "cadara_lib"
