[package]
name = "computegraph"
description = "Library for building and executing directed acyclic compute graphs with parallel execution and caching support."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
computegraph_macros.workspace = true
dyn-clone.workspace = true
dagga.workspace = true

[dev-dependencies]
anyhow.workspace = true
