[package]
name = "computegraph_macros"
description = "Procedural macros for the ComputeGraph library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
proc-macro2 = "1.0"
