[package]
name = "modeling-module"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
module = { path = "../module" }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde = { version = "1.0.195", features = ["derive", "alloc", "rc"] }
occara = { path = "../occara" }
