[package]
name = "modeling-module"
description = "CADara module for modeling of 3D objects."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
module.workspace = true
uuid.workspace = true
serde.workspace = true
occara.workspace = true
