[package]
name = "modeling-workspace"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
workspace = { path = "../workspace" }
modeling-module = { path = "../modeling-module" }
viewport = { path = "../viewport" }
computegraph = { path = "../computegraph" }
occara = { path = "../occara" }
project = { path = "../project" }
iced = { version = "0.12.1", features = ["advanced"] }
bytemuck = "1.17.0"
utils = { path = "../utils" }
glam = { version = "0.27.0", features = ["bytemuck"] }
