[package]
name = "modeling-workspace"
description = "Workspace for interactive model editing."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
workspace.workspace = true
viewport = { path = "../viewport" }
computegraph = { path = "../computegraph" }
modeling-module.workspace = true
occara.workspace = true
project.workspace = true
iced.workspace = true
bytemuck.workspace = true
glam.workspace = true
uuid.workspace = true
