[package]
name = "module"
description = "Traits for defining CADara modules."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
serde.workspace = true
uuid.workspace = true
