[package]
name = "occara"
description = "High-level Rust bindings to the OpenCASCADE B-Rep library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
autocxx.workspace = true
cxx.workspace = true
walkdir.workspace = true

[build-dependencies]
opencascade-sys.workspace = true
cxx-build.workspace = true
walkdir.workspace = true
autocxx-build.workspace = true
miette.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "occara"
harness = false
