[package]
name = "opencascade-sys"
description = "Helper library for building OpenCASCADE."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
cmake.workspace = true
walkdir.workspace = true
