[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "serde"] }
utils = { path = "../utils" }
module = { path = "../module" }
serde = { version = "1.0.195", features = ["derive", "alloc", "rc"] }
serde_json = "1.0.111"
erased-serde = "0.4.2"

[dev-dependencies]
lazy_static = "1.4.0"
