[package]
name = "project"
description = "Data and dependency management for Projects in CADara"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
uuid.workspace = true
module.workspace = true
serde.workspace = true
serde_json.workspace = true
erased-serde.workspace = true
dyn-clone.workspace = true
paste = "1.0.15"

[dev-dependencies]
lazy_static.workspace = true
