[package]
name = "viewport"
description = "Modular iced viewport widget for CADara"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
iced.workspace = true
computegraph.workspace = true
thiserror.workspace = true
project.workspace = true
