[package]
name = "workspace"
description = "Traits for defining CADara workspaces."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
viewport.workspace = true
